--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
 <p>
   Welcome to my website, I just love fortnite and it would be amazing if we could be friends!
 </p>
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/svHCXvQeZfY">
+</iframe> 
 </body>
 </html>
