--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
 	<title>fortnitepro17's website</title>
 	<meta charset="utf-8">
+	<style>
+	body{
+		margin:1em auto;
+		color:WhiteSmoke;
+		background:LightSlateGray;
+		max-width:40em;
+		padding:0 .62em;
+		font:1.2em/1.62em;
+		font-family: "Sans Serif", monospace;
+	}
+	</style>
 </head>
 <body>
 <pre>
